# pir-processing

./: .gitignore  .pylintrc  LICENSE.md  PirFile.py  README-es.md  README.md  main.py  pir.py  plot_ir.ipynb  pyproject.toml  requirements.txt  setup.py  transform_all_pir_to_ascii.py  transform_all_pir_to_txt.py
.github/workflows/: linting-and-codestyle.yml  pylint.yml  pypi-deploy.yml
notebooks/: plot_ir.ipynb
pir_processing/: __init__.py  __main__.py  logger.py  pir.py  services.py
pir_processing/utils/: __init__.py
pypir/: __init__.py  __main__.py  pir.py  services.py
tests/: test_pir.py
tests/mock_data/: __init__.py  untitled_ver_deg0.pir
utils/: __init__.py
