[tool.poetry]
name = "pir-processing"
version = "0.0.2"
description = "Python tools for processing ARTA's PIR file format"
authors = ["Ivan Pupkin <ipupkin@untref.edu.ar>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.2"
mypy = "^1.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
